--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -27,15 +27,37 @@ spec:
       - name: klusterfuck
         image: nipun/klusterfuck:0.0.1
         imagePullPolicy: IfNotPresent
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+        # use downward API
+        env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         ports:
           - containerPort: 8080
         resources:
           limits:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 1000m
+            memory: 1000Mi
           requests:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 1000m
+            memory: 1000Mi
 ---
 apiVersion: v1
 kind: Service
