--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,14 @@
 spring:
+#  datasource:
+#    url: "jdbc:mysql://localhost:3306/klusterfuck"
+#    username: "root"
+#    passwoed: ""
   datasource:
     url: "jdbc:derby:./data/klusterfuck;create=true"
   jpa:
     hibernate:
       ddl-auto: update
+
+app:
+  kube:
+    configType: kubeconf
