--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: klusterfuck
-        image: nipun/klusterfuck:0.0.1
+        image: nipun/klusterfuck-admin:0.0.1
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
