--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>admin</artifactId>
 
+    <properties>
+        <swagger.output.dir>${project.build.directory}/generated-sources/swagger</swagger.output.dir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,6 +48,12 @@
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
             <version>2.2.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
         </dependency>
 
         <dependency>
@@ -88,14 +98,66 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>com.github.kongchen</groupId>
+                <artifactId>swagger-maven-plugin</artifactId>
+                <version>3.1.3</version>
+                <dependencies>
+                </dependencies>
+                <configuration>
+                    <apiSources>
+                        <apiSource>
+                            <springmvc>true</springmvc>
+                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
+                            <schemes>http</schemes>
+                            <basePath>/</basePath>
+                            <info>
+                                <title>API</title>
+                                <version>v1</version>
+                                <description>API</description>
+                            </info>
+                            <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
+                        </apiSource>
+                    </apiSources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>1-gen-swagger</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>2.2.2</version>
+                <executions>
+                    <execution>
+                        <id>2-gen-ts-client</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
+                            <language>typescript-angular2</language>
+                            <output>src/main/ui/src/client</output>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.4</version>
                 <configuration>
                     <workingDirectory>src/main/ui</workingDirectory>
                 </configuration>
                 <executions>
                     <execution>
                         <id>install node and yarn</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>install-node-and-yarn</goal>
                         </goals>
@@ -107,17 +169,19 @@
 
                     <execution>
                         <id>install node and npm</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <nodeVersion>v6.9.4</nodeVersion>
+                            <nodeVersion>v7.5.0</nodeVersion>
                             <npmVersion>3.10.10</npmVersion>
                         </configuration>
                     </execution>
 
                     <execution>
                         <id>yarn install</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>yarn</goal>
                         </goals>
@@ -128,6 +192,7 @@
 
                     <execution>
                         <id>npm run build</id>
+                        <phase>compile</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
