Update image tags in sample manifest and admin code

--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -41,7 +41,7 @@ spec:
       - name: klusterfuck
         securityContext:
           privileged: true
-        image: nipun/klusterfuck-admin:0.0.1
+        image: nipun/klusterfuck-admin:0.1.0
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
@@ -55,7 +55,6 @@ spec:
             scheme: HTTP
           initialDelaySeconds: 30
           timeoutSeconds: 1
-        # use downward API
         env:
           - name: POD_NAME
             valueFrom:
@@ -71,6 +70,8 @@ spec:
             value: "gogsadmin"
           - name: GOGS_PASSWORD
             value: "admin1234"
+          - name: AGENT_IMAGE
+            value: "nipun/klusterfuck-agent:0.1.0"
         ports:
           - containerPort: 8080
         resources:
