--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -5,6 +5,63 @@ metadata:
   labels:
     name: klusterfuck
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kf
+  namespace: kube-system
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+    name: kf
+    namespace: kube-system
+rules:
+- apiGroups:
+  - ""
+  - "extensions"
+  resources:
+  - configmaps
+  - secrets
+  - services
+  - endpoints
+  - ingresses
+  - nodes
+  - pods
+  verbs:
+  - list
+  - get
+  - watch
+  - create
+- apiGroups:
+  - "extensions"
+  - ""
+  resources:
+  - ingresses
+  - ingresses/status
+  verbs:
+  - get
+  - update
+  - create
+  - list
+  - patch
+  - delete
+  - watch
+- apiGroups:
+  - "*"
+  - ""
+  resources:
+  - events
+  - certificates
+  - secrets
+  verbs:
+  - create
+  - list
+  - update
+  - get
+  - patch
+  - watch
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
@@ -17,6 +74,34 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: kf-custom-admin
+  namespace: klusterfuck
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: klusterfuck
+roleRef:
+  kind: ClusterRole
+  name: kf
+  apiGroup: rbac.authorization.k8s.io
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: kf-node-admin
+  namespace: klusterfuck
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: klusterfuck
+roleRef:
+  kind: ClusterRole
+  name: system:node
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: v1
@@ -41,7 +126,7 @@ spec:
       - name: klusterfuck
         securityContext:
           privileged: true
-        image: nipun/klusterfuck-admin:0.1.1
+        image: nipun/klusterfuck-admin:0.1.2
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
@@ -71,7 +156,7 @@ spec:
           - name: GOGS_PASSWORD
             value: "admin1234"
           - name: AGENT_IMAGE
-            value: "nipun/klusterfuck-agent:0.1.1"
+            value: "nipun/klusterfuck-agent:0.1.2"
         ports:
           - containerPort: 8080
         resources:
@@ -103,7 +188,7 @@ spec:
       containers:
       - name: gogs
         image: fabric8/gogs
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         readinessProbe:
           httpGet:
             path: /
