--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>jersey-client</artifactId>
             <version>2.24.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.6</version>
+        </dependency>
 
         <!-- test deps -->
         <dependency>
