Removed liveness probe for admin pod; use jvm args to discover container memory limit

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -283,7 +283,7 @@
                         <image>
                             <name>nipun/klusterfuck-admin:${image.version}</name>
                             <build>
-                                <from>openjdk:8-jre-alpine</from>
+                                <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
                                 <assembly>
                                     <basedir>/app</basedir>
@@ -310,7 +310,7 @@
                                     <port>8080</port>
                                 </ports>
                                 <entryPoint>
-                                    <shell>java -Xms1024m -Xmx1024m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar /app/klusterfuck-admin-${project.version}.jar --spring.config.location=/app/application.yaml</shell>
+                                    <shell>java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar /app/klusterfuck-admin-${project.version}.jar --spring.config.location=/app/application.yaml</shell>
                                 </entryPoint>
                             </build>
                         </image>
