--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -4,17 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>klusterfuck</artifactId>
-        <groupId>com.github.nk</groupId>
+        <groupId>com.github.nk.klusterfuck</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>agent</artifactId>
 
-
     <dependencies>
         <dependency>
-            <groupId>com.github.nk</groupId>
+            <groupId>com.github.nk.klusterfuck</groupId>
             <artifactId>common</artifactId>
         </dependency>
 
