--- a/flow/pom.xml
+++ b/flow/pom.xml
@@ -9,11 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>admin</artifactId>
-
-    <properties>
-        <swagger.output.dir>${project.build.directory}/generated-sources/swagger</swagger.output.dir>
-    </properties>
+    <artifactId>flow</artifactId>
 
     <dependencies>
         <dependency>
@@ -26,51 +22,19 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.5</version>
-        </dependency>
-        <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
             <version>4.8.0.201705170830-rc1</version>
         </dependency>
-
         <dependency>
-            <groupId>io.fabric8</groupId>
-            <artifactId>kubernetes-client</artifactId>
-            <version>2.2.13</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.6.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.n-k</groupId>
-            <artifactId>java-gogs-client</artifactId>
-            <version>3ae19fa</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.24.1</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -89,130 +53,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
-        <finalName>klusterfuck-admin-${project.version}</finalName>
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>container/**</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/ui/dist</directory>
-                <targetPath>static</targetPath>
-            </resource>
-        </resources>
+        <finalName>klusterfuck-flow-${project.version}</finalName>
         <plugins>
-            <plugin>
-                <groupId>com.github.kongchen</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
-                <version>3.1.3</version>
-                <dependencies>
-                </dependencies>
-                <configuration>
-                    <apiSources>
-                        <apiSource>
-                            <springmvc>true</springmvc>
-                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                            <schemes>http</schemes>
-                            <basePath>/</basePath>
-                            <info>
-                                <title>API</title>
-                                <version>v1</version>
-                                <description>API</description>
-                            </info>
-                            <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
-                        </apiSource>
-                    </apiSources>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>1-gen-swagger</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>2.2.2</version>
-                <executions>
-                    <execution>
-                        <id>2-gen-ts-client</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
-                            <language>typescript-angular2</language>
-                            <output>src/main/ui/src/client</output>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.4</version>
-                <configuration>
-                    <workingDirectory>src/main/ui</workingDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install node and yarn</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>install-node-and-yarn</goal>
-                        </goals>
-                        <configuration>
-                            <nodeVersion>v6.9.4</nodeVersion>
-                            <yarnVersion>v0.22.0</yarnVersion>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>install node and npm</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <configuration>
-                            <nodeVersion>v7.5.0</nodeVersion>
-                            <npmVersion>3.10.10</npmVersion>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>yarn install</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>yarn</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>npm run build</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-
-                        <configuration>
-                            <arguments>run build:prod</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -272,7 +115,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.github.nk.klusterfuck.admin.Application</mainClass>
+                                    <mainClass>com.github.nk.klusterfuck.flow.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -286,7 +129,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>nipun/klusterfuck-admin:${image.version}</name>
+                            <name>nipun/klusterfuck-flow:${image.version}</name>
                             <build>
                                 <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
@@ -298,7 +141,7 @@
                                                 <directory>target</directory>
                                                 <outputDirectory>/</outputDirectory>
                                                 <includes>
-                                                    <include>klusterfuck-admin-${project.version}.jar</include>
+                                                    <include>klusterfuck-flow-${project.version}.jar</include>
                                                 </includes>
                                             </fileSet>
                                             <fileSet>
@@ -315,7 +158,7 @@
                                     <port>8080</port>
                                 </ports>
                                 <entryPoint>
-                                    <shell>java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar /app/klusterfuck-admin-${project.version}.jar --spring.config.location=/app/application.yaml</shell>
+                                    <shell>java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XshowSettings:vm -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar /app/klusterfuck-flow-${project.version}.jar --spring.config.location=/app/application.yaml</shell>
                                 </entryPoint>
                             </build>
                         </image>
