--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.nk</groupId>
+    <groupId>com.github.nk.klusterfuck</groupId>
     <artifactId>klusterfuck</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -12,6 +12,8 @@
         <module>admin</module>
         <module>agent</module>
         <module>common</module>
+        <module>flow</module>
+        <module>connector-timer</module>
     </modules>
 
     <properties>
@@ -47,18 +49,28 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>com.github.nk</groupId>
+                <groupId>com.github.nk.klusterfuck</groupId>
                 <artifactId>common</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.nk</groupId>
+                <groupId>com.github.nk.klusterfuck</groupId>
                 <artifactId>admin</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.nk</groupId>
+                <groupId>com.github.nk.klusterfuck</groupId>
                 <artifactId>agent</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nk.klusterfuck</groupId>
+                <artifactId>flow</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.nk.klusterfuck</groupId>
+                <artifactId>connector-timer</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
