--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>common</module>
         <module>flow</module>
         <module>connector-timer</module>
+        <module>client</module>
     </modules>
 
     <properties>
