--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -111,30 +111,50 @@
                 <groupId>com.github.kongchen</groupId>
                 <artifactId>swagger-maven-plugin</artifactId>
                 <version>3.1.3</version>
-                <dependencies>
-                </dependencies>
-                <configuration>
-                    <apiSources>
-                        <apiSource>
-                            <springmvc>true</springmvc>
-                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                            <schemes>http</schemes>
-                            <basePath>/</basePath>
-                            <info>
-                                <title>API</title>
-                                <version>v1</version>
-                                <description>API</description>
-                            </info>
-                            <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
-                        </apiSource>
-                    </apiSources>
-                </configuration>
                 <executions>
                     <execution>
                         <id>1-gen-swagger</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                        <configuration>
+                            <apiSources>
+                                <apiSource>
+                                    <springmvc>true</springmvc>
+                                    <locations>com.github.nk.klusterfuck.admin.controllers</locations>
+                                    <schemes>http</schemes>
+                                    <basePath>/</basePath>
+                                    <info>
+                                        <title>API</title>
+                                        <version>v1</version>
+                                        <description>API</description>
+                                    </info>
+                                    <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
+                                </apiSource>
+                            </apiSources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>2-gen-swagger</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <apiSources>
+                                <apiSource>
+                                    <springmvc>true</springmvc>
+                                    <locations>com.github.nk.klusterfuck.admin.controllers</locations>
+                                    <schemes>http</schemes>
+                                    <basePath>/</basePath>
+                                    <info>
+                                        <title>API</title>
+                                        <version>v1</version>
+                                        <description>API</description>
+                                    </info>
+                                    <swaggerDirectory>${project.basedir}/../client/src/main/resources</swaggerDirectory>
+                                </apiSource>
+                            </apiSources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -153,21 +173,6 @@
                             <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
                             <language>typescript-angular2</language>
                             <output>src/main/ui/src/client</output>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>2-gen-java-client</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
-                            <language>java</language>
-                            <output>../client</output>
-                            <configOptions>
-                                <sourceFolder>src/main/java</sourceFolder>
-                            </configOptions>
                         </configuration>
                     </execution>
                 </executions>
