--- a/admin/src/main/ui/package.json
+++ b/admin/src/main/ui/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "gojs": "^1.7.11",
     "jsplumb": "^2.4.2",
     "ngx-modal": "0.0.29",
     "rxjs": "^5.1.0",
