Fix master version

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ data/
 .classpath
 release.properties
 */pom.xml.releaseBackup
+*/pom.xml.versionsBackup
 pom.xml.releaseBackup
+pom.xml.versionsBackup
