Keep swagger generated sources in gen-sources folders

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -52,20 +52,16 @@
                 <version>2.2.2</version>
                 <executions>
                     <execution>
-                        <id>2-gen-java-client</id>
-                        <phase>compile</phase>
+                        <id>gen-java-client</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
                             <inputSpec>${project.basedir}/src/main/resources/swagger.json</inputSpec>
                             <language>java</language>
-                            <output>${project.basedir}</output>
+                            <output>${project.build.directory}/generated-sources/swagger</output>
                             <apiPackage>com.github.nk.klusterfuck.client</apiPackage>
                             <modelPackage>com.github.nk.klusterfuck.client.model</modelPackage>
-                            <configOptions>
-                                <sourceFolder>src/main/java</sourceFolder>
-                            </configOptions>
                         </configuration>
                     </execution>
                 </executions>
