--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -131,13 +131,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <version>${spring-boot.version}</version>
-                    </dependency>
-                </dependencies>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <filters>
@@ -159,15 +152,6 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/spring.handlers</resource>
-                                </transformer>
-                                <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
-                                    <resource>META-INF/spring.factories</resource>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/spring.schemas</resource>
-                                </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.github.nk.klusterfuck.admin.Application</mainClass>
@@ -227,57 +211,57 @@
             <id>gen-client</id>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>com.github.kongchen</groupId>
-                        <artifactId>swagger-maven-plugin</artifactId>
-                        <version>3.1.3</version>
-                        <executions>
-                            <execution>
-                                <id>1-gen-swagger</id>
-                                <goals>
-                                    <goal>generate</goal>
-                                </goals>
-                                <configuration>
-                                    <apiSources>
-                                        <apiSource>
-                                            <springmvc>true</springmvc>
-                                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                                            <schemes>http</schemes>
-                                            <basePath>/</basePath>
-                                            <info>
-                                                <title>API</title>
-                                                <version>v1</version>
-                                                <description>API</description>
-                                            </info>
-                                            <swaggerDirectory>${swagger.output.dir}</swaggerDirectory>
-                                        </apiSource>
-                                    </apiSources>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>2-gen-swagger</id>
-                                <goals>
-                                    <goal>generate</goal>
-                                </goals>
-                                <configuration>
-                                    <apiSources>
-                                        <apiSource>
-                                            <springmvc>true</springmvc>
-                                            <locations>com.github.nk.klusterfuck.admin.controllers</locations>
-                                            <schemes>http</schemes>
-                                            <basePath>/</basePath>
-                                            <info>
-                                                <title>API</title>
-                                                <version>v1</version>
-                                                <description>API</description>
-                                            </info>
-                                            <swaggerDirectory>${project.basedir}/../client/src/main/resources</swaggerDirectory>
-                                        </apiSource>
-                                    </apiSources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+                    <!--<plugin>-->
+                        <!--<groupId>com.github.kongchen</groupId>-->
+                        <!--<artifactId>swagger-maven-plugin</artifactId>-->
+                        <!--<version>3.1.3</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>1-gen-swagger</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>generate</goal>-->
+                                <!--</goals>-->
+                                <!--<configuration>-->
+                                    <!--<apiSources>-->
+                                        <!--<apiSource>-->
+                                            <!--<springmvc>true</springmvc>-->
+                                            <!--<locations>com.github.nk.klusterfuck.admin.controllers</locations>-->
+                                            <!--<schemes>http</schemes>-->
+                                            <!--<basePath>/</basePath>-->
+                                            <!--<info>-->
+                                                <!--<title>API</title>-->
+                                                <!--<version>v1</version>-->
+                                                <!--<description>API</description>-->
+                                            <!--</info>-->
+                                            <!--<swaggerDirectory>${swagger.output.dir}</swaggerDirectory>-->
+                                        <!--</apiSource>-->
+                                    <!--</apiSources>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                            <!--<execution>-->
+                                <!--<id>2-gen-swagger</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>generate</goal>-->
+                                <!--</goals>-->
+                                <!--<configuration>-->
+                                    <!--<apiSources>-->
+                                        <!--<apiSource>-->
+                                            <!--<springmvc>true</springmvc>-->
+                                            <!--<locations>com.github.nk.klusterfuck.admin.controllers</locations>-->
+                                            <!--<schemes>http</schemes>-->
+                                            <!--<basePath>/</basePath>-->
+                                            <!--<info>-->
+                                                <!--<title>API</title>-->
+                                                <!--<version>v1</version>-->
+                                                <!--<description>API</description>-->
+                                            <!--</info>-->
+                                            <!--<swaggerDirectory>${project.basedir}/../client/src/main/resources</swaggerDirectory>-->
+                                        <!--</apiSource>-->
+                                    <!--</apiSources>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
                     <plugin>
                         <groupId>io.swagger</groupId>
                         <artifactId>swagger-codegen-maven-plugin</artifactId>
@@ -290,7 +274,7 @@
                                     <goal>generate</goal>
                                 </goals>
                                 <configuration>
-                                    <inputSpec>${swagger.output.dir}/swagger.json</inputSpec>
+                                    <inputSpec>${project.basedir}/src/main/resources/swagger.json</inputSpec>
                                     <language>typescript-angular2</language>
                                     <output>src/main/ui/src/client</output>
                                 </configuration>
